<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context=".view.RegisterActivity"
    tools:viewBindingIgnore="false">

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_welcome"
        android:textColor="@color/semi_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input_text"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/tv_title_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/semi_brown"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_text"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/tv_title_psw"
            android:inputType="textPassword"
            android:textColor="@color/semi_brown"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn_background"
            android:text="@string/tv_signin"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            app:backgroundTint="@color/pink"
            app:layout_constraintTop_toBottomOf="@id/edt_psw" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_btn_background"
            android:text="@string/tv_signup"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semi_bold"
            app:backgroundTint="@color/pink"
            app:layout_constraintTop_toBottomOf="@id/btn_signin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>